# mcp-google-workspace

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml
mcp_google_workspace/: __main__.py  config.py  server.py
mcp_google_workspace/auth/: context.py  credentials.py  oauth_flow.py  oauth_provider.py  token_store.py
mcp_google_workspace/services/: calendar.py  drive.py  gmail.py  sheets.py
mcp_google_workspace/tools/: calendar.py  drive.py  gmail.py  sheets.py
